# triton-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh
checkpoints/: .gitignore  download.sh  export_onnx.sh
src/triton_server/: __main__.py  version.py
src/triton_server/configs/: __init__.py  main.py  models.py
src/triton_server/configs/conf/: dev.yaml  prod.yaml
src/triton_server/engine/: __init__.py
src/triton_server/engine/jina_clip/: __init__.py  base.py  jina_clip.py
src/triton_server/engine/owl/: __init__.py  base.py  owlv2.py  owlvit.py  utils.py
src/triton_server/engine/paddle/: __init__.py  paddle_ocr.py
src/triton_server/engine/sam/: __init__.py  sam.py
src/triton_server/engine/whisper/: __init__.py  base.py  transcript.py  whisper_onnx.py  whisper_torch.py
tests/: test_client_threaded.py  test_configs.py  test_jina_clip.py  test_jina_clip_client.py  test_owl.py  test_owl_client.py  test_owlv2.py  test_paddle.py  test_paddle_client.py  test_sam.py  test_sam_client.py  test_whisper.py  test_whisper_client.py
