[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata

name = "triton-server"
description = "Triton Server"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Quang Vo", email = "vovanquangnbk@gmail.com" }]
dependencies = [
    "nvidia-pytriton>=0.7.0",
    "click",
    "huggingface-hub[hf-transfer]",
    "librosa",
    "matplotlib",
    "transformers",
    "torch",
    "torchvision",
    "torchaudio",
    "paddlepaddle-gpu",
    "paddleocr<3.0",
    "optimum[onnxruntime-gpu]<2.0",
    "onnx<1.17",
    "onnxruntime-gpu",
    "opencv-python",
    "pydantic",
    "pydantic-settings",
    "einops>=0.8.1",
    "timm>=1.0.22",
]
dynamic = ["version"]


[tool.pyink]
# Format py files following Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
pyink-annotation-pragmas = [
  "noqa",
  "pylint:",
  "type: ignore",
  "pytype:",
  "mypy:",
  "pyright:",
  "pyre-",
]

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"




[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.uv.sources]
sam-3 = { git = "https://github.com/facebookresearch/sam3s.git" }

